--- a/k2_webapp/templates/vetting_template.html
+++ b/k2_webapp/templates/vetting_template.html
@@ -5,37 +5,32 @@
 {% block title %} K2 Vetting {% endblock %}
 {% block head %}
   {{ super() }}
+{% endblock %}
+{% block sidebar %}
+{{table_list(cattable)}}
+{% from 'macros.html' import  scatter_coords %}
+{{ scatter_coords(starname,starcoords,coords) }}
+<div id="scatter" style="width: 350px; height: 350px; margin: 0 auto"></div>
+{% endblock %}
 
 
+{% block main %}
+{% block buttons %}
+<div class="container">
+  <h1>Vetting {{ starname }}</h1>
+  <form method="post" >
+    <input type="submit" name="is_eKOI" value="eKOI">
+    <input type="submit" name="not_eKOI" value="Not eKOI">
+    {{ is_eKOI_string }} 
+  </form>
+</div>
 {% endblock %}
 
 {% block content %}
-
-
-
-  {{ super() }}
-
-  <div class="container">
-      <h1>Vetting {{ starname }}</h1>
-      <form method="post" >
-	<input type="submit" name="is_eKOI" value="eKOI">
-	<input type="submit" name="not_eKOI" value="Not eKOI">
-	{{ is_eKOI_string }} 
-      </form>
-  </div>
-
-  {{table_list(cattable)}}
-  {% from 'macros.html' import  scatter_coords %}
-
-  {{ scatter_coords(starname,starcoords,coords) }}
-  <div id="scatter" style="width: 350px; height: 350px; margin: 0 auto"></div>
-
-
   {{plot_list(tps_imagepars)}}
   {{plot_list(phot_imagepars)}}
   {{table_list(table)}}
   {{table_list(tablelong)}}
-
-
+{% endblock %}
 
 {% endblock %}
