Added is_EB functionality

--- a/k2_webapp/templates/base.html
+++ b/k2_webapp/templates/base.html
@@ -10,7 +10,7 @@
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <style>
       .container {
-      max-width: 1000px;
+      width: 75%;
       }
     </style>
 
@@ -26,6 +26,7 @@
     <style>
     #header {
     background:#ddd;
+    width: 100%;
     }
     
     #nav {
@@ -34,16 +35,16 @@
     
     #main {
     float:left;
-    width:1000px;
+    width: 75%;
     }
     
     #sidebar {
     float:right;
-    width:350px;
+    width: 25%;
     }
     
     #wrap {
-    width:1350px;
+    width: 100%;
     margin:0 auto;
     }
     </style>
