--- a/k2_webapp/templates/macros.html
+++ b/k2_webapp/templates/macros.html
@@ -22,6 +22,15 @@
 
 {% macro scatter_coords(starname,starcoords,coords) %}
 <script>        
+
+Highcharts.setOptions({
+   plotOptions: {
+      series: {
+         animation: false
+      }
+   }
+})
+
 $(function () {
     $('#scatter').highcharts({
         chart: {
@@ -47,6 +56,7 @@ $(function () {
         },
 
         plotOptions: {
+
             scatter: {
                 marker: {
                     radius: 2,
@@ -78,85 +88,12 @@ data: [
 [{{ra}},{{dec}}],
 {% endfor %}
 ]
+
+
 },
 {
 name: '{{starname}}',
 marker: {radius: 10,},
-
-data: [
-{% for ra,dec in starcoords %}
-[{{ra}},{{dec}}],
-{% endfor %}
-]
-}
-]
-
-
-    });
-});
-</script>
-{% endmacro %}
-
-
-{% macro scatter_coords2(starname,starcoords,coords) %}
-<script>        
-$(function () {
-    $('#scatter').highcharts({
-        chart: {
-            type: 'scatter',
-            zoomType: 'xy'
-        },
-        title: {
-            text: 'Location of {{starname}} on FOV'
-        },
-        xAxis: {
-            title: {
-                enabled: true,
-                text: 'RA (deg)'
-            },
-            startOnTick: true,
-            endOnTick: true,
-            showLastLabel: true
-        },
-        yAxis: {
-            title: {
-                text: 'Dec (deg)'
-            }
-        },
-
-        plotOptions: {
-            scatter: {
-                marker: {
-                    radius: 2,
-                    states: {
-                        hover: {
-                            enabled: true,
-                            lineColor: 'rgb(100,100,100)'
-                        }
-                    }
-                },
-                states: {
-                    hover: {
-                        marker: {
-                            enabled: false
-                        }
-                    }
-                },
-                tooltip: {
-                    headerFormat: '<b>{series.name}</b><br>',
-                    pointFormat: '{point.x}, {point.y}'
-                }
-            }
-        },
-        series: [
-{
-name: 'K2 Target Stars',
-data: [ {{ coords }} ],
-},
-{
-name: '{{starname}}',
-marker: {radius: 10,},
-
 data: [
 {% for ra,dec in starcoords %}
 [{{ra}},{{dec}}],
