--- a/k2_webapp/templates/vetting_session_start_template.html
+++ b/k2_webapp/templates/vetting_session_start_template.html
@@ -9,19 +9,16 @@
       <div class="header">
         <h3 class="text-muted">Enter in List of Starnames </h3>
       </div>
-      <hr/>
-      <form class="form" method="post">
-        <div class="form-group">
-          <div class="col-lg-2">
-            <input type="text" name="starname_list" placeholder="List of starnames"
-                   class="form-control">
-          </div>
 
-        <input type="submit" class="btn btn-primary" value="Submit">
-	  <p>
-	  e.g. 202092659 202091740 202135853 202087553 202068686
-	  </p>
+      <form class="form-horizontal" role="form" method="post">
+	<div class="form-group form-group-lg">
+	  <div class="col-sm-10">
+	    <input class="form-control" type="text" id="formGroupInputLarge" 
+		   name="starname_list" placeholder="List of starnames">
+	    <input type="submit" class="btn btn-primary" value="Submit">
+	    e.g. 202092659 202091740 202135853 202087553 202068686
+	  </div>
+	</div>
       </form>
-    </div>
   </body>
 </html>
