Made bootstrap https so that it works on NERSC

--- a/k2_webapp/templates/base.html
+++ b/k2_webapp/templates/base.html
@@ -7,7 +7,7 @@
     <title> {% block title %} {% endblock %}</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <style>
       .container {
       width: 75%;
@@ -15,11 +15,11 @@
     </style>
 
     <!-- 1. Add JQuery and Highcharts in the head of your page -->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="http://code.highcharts.com/highcharts.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
     
     <!-- 2. You can add print and export feature by adding this line -->
-    <script src="http://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
     {% endblock %}
 
 
