Changes to k2_webapp code for C1 data

--- a/k2_webapp/templates/vetting_session_template.html
+++ b/k2_webapp/templates/vetting_session_template.html
@@ -1,4 +1,4 @@
-{% extends "vetting_template.html" %}
+{% extends "vetting_template_C1.html" %}
 {% block title %} Vetting Session {% endblock %}
 
 
