Changes to webapp that reflect v0.4 of the pipeline

--- a/k2_webapp/templates/vetting_template_C1.html
+++ b/k2_webapp/templates/vetting_template_C1.html
@@ -85,8 +85,8 @@ Top row: SNR “periodogram” of box-car photometric search for transiting plan
 
 
 <div id="image">
-  <a href="{{ phot_outdir }}/{{ starname }}_1-ses-vs-aperture-size.png">
-  <img src="{{ phot_outdir }}/{{ starname }}_1-ses-vs-aperture-size.png" width="50%">
+  <a href="{{ phot_outdir }}/{{ starname }}_1-noise-vs-aperture-size.png">
+  <img src="{{ phot_outdir }}/{{ starname }}_1-noise-vs-aperture-size.png" width="50%">
   </a>
   <div class="caption">
      <p> Quick look plot </p>
@@ -94,8 +94,8 @@ Top row: SNR “periodogram” of box-car photometric search for transiting plan
 </div>
 
 <div id="image">
-  <a href="{{ phot_outdir }}/{{ starname }}_2-pos_pc0.png">
-  <img src="{{ phot_outdir }}/{{ starname }}_2-pos_pc0.png" width="50%">
+  <a href="{{ phot_outdir }}/{{ starname }}_fdt_t_roll_r=3_15.png">
+  <img src="{{ phot_outdir }}/{{ starname }}_fdt_t_roll_r=3_15.png" width="50%">
   </a>
   <div class="caption">
      <p> Quick look plot </p>
@@ -103,8 +103,8 @@ Top row: SNR “periodogram” of box-car photometric search for transiting plan
 </div>
 
 <div id="image">
-  <a href="{{ phot_outdir }}/{{ starname }}_3-gp_t_pos.png">
-  <img src="{{ phot_outdir }}/{{ starname }}_3-gp_t_pos.png" width="100%">
+  <a href="{{ phot_outdir }}/{{ starname }}_fdt_t_roll_2D.png">
+  <img src="{{ phot_outdir }}/{{ starname }}_fdt_t_roll_2D.png" width="100%">
   </a>
   <div class="caption">
      <p> Quick look plot </p>
@@ -112,8 +112,8 @@ Top row: SNR “periodogram” of box-car photometric search for transiting plan
 </div>
 
 <div id="image">
-  <a href="{{ phot_outdir }}/{{ starname }}_4-gp_t_pos_zoom.png">
-  <img src="{{ phot_outdir }}/{{ starname }}_4-gp_t_pos_zoom.png" width="100%">
+  <a href="{{ phot_outdir }}/{{ starname }}_fdt_t_roll_2D_zoom.png">
+  <img src="{{ phot_outdir }}/{{ starname }}_fdt_t_roll_2D_zoom.png" width="100%">
   </a>
   <div class="caption">
      <p> Quick look plot </p>
